# charger-reliability

./: .gitignore  .pre-commit-config.yaml  README.md  notes.txt  pilot.ipynb  pyproject.toml  requirements.txt  ruff.toml
conf/: logging.yml
conf/base/: catalog.yml  parameters_build_domain_model.yml  parameters_charger_model.yml  parameters_preprocess_data.yml
data/: README.md  manifest.yml
data/organizations/: Organization-list-20230927.csv
data/organizations/inventory/: org_inventory_station_all_columns-20230927.csv
data/reports/: video_ad_logs.csv
data/stations/: stations_overview.csv
docs/source/: api.rst  conf.py  design_decisions.md  index.rst  introduction.rst
notebooks/: bdag.ipynb  marimo_test.py  mgcr_pilot.ipynb  stats.json  test_state_machine.ipynb
python/chargepoint/: __init__.py  alarms.py  history.py  model.py  state_machine.py
python/s3l_utils/: __init__.py  enum.py
src/chargepoint/: __init__.py  alarms.py  model.py  state_machine.py
src/ev_charger_reliability/: __init__.py  __main__.py
src/ev_charger_reliability/pipelines/preprocess_data/: nodes.py  pipeline.py
src/evsee/: __init__.py  __main__.py
src/evsee/pipelines/build_domain_model/: __init__.py  nodes.py  pipeline.py
src/evsee/pipelines/charger_model/: __init__.py  nodes.py  pipeline.py
src/evsee/pipelines/preprocess_data/: __init__.py  nodes.py  pipeline.py
src/evsepr/: __init__.py  __main__.py
src/evsepr/pipelines/preprocess_data/: pipeline.py
src/s3l_utils/: __init__.py  dataset.py  enum.py  functional.py  notebook.py
src/tests/pipelines/preprocess_data/: test_pipeline.py
tests/evsee/: test_sanity.py
tests/evsee/pipelines/build_domain_model/: test_pipeline.py
tests/s3l_utils/: test_sanity.py
