[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evsepr"
readme = "README.md"
dynamic = ["version",]
description = "Default template for PDM package"
authors = [
    {name = "Brandon D'Agostino", email = "bdag@stanford.edu"},
]
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "kedro~=0.19.2",
    "kedro-datasets[pandas.CSVDataset, pandas.ExcelDataset, pandas.ParquetDataset]>=1.0",
    "kedro-viz>=6.7.0",
    "notebook",
    "python-statemachine>=2.1.2",
    "marimo>=0.2.4",
]
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}

[project.scripts]
evsepr = "evsepr.__main__:main"

[tool.pdm.dev-dependencies]
docs = [ "docutils<0.18.0", "sphinx~=3.4.3", "sphinx_rtd_theme==0.5.1", "nbsphinx==0.8.1", "sphinx-autodoc-typehints==1.11.1", "sphinx_copybutton==0.3.1", "ipykernel>=5.3, <7.0", "Jinja2<3.1.0", "myst-parser~=0.17.2",]
lint_format = [
    "ruff>=0.2.1",
    "pre-commit>=3.6.1",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.kedro]
package_name = "evsepr"
project_name = "evsepr"
kedro_init_version = "0.19.2"
tools = [ "Linting", "Custom Logging", "Documentation", "Data Structure", "Kedro Viz",]
example_pipeline = "False"
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true

[tool.ruff.lint]
select = [ "F", "W", "E", "I", "UP", "PL", "T201",]
ignore = [ "E501",]

[tool.pdm]
distribution = true
[tool.ruff.format]
docstring-code-format = true

[tool.setuptools.dynamic.version]
attr = "evsepr.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
