[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evsee"
readme = "README.md"
dynamic = ["version"]
description = "Default template for PDM package"
authors = [{ name = "Brandon D'Agostino", email = "bdag@stanford.edu" }]
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "kedro~=0.19.2",
    "kedro-datasets[pandas.CSVDataset, pandas.ExcelDataset, pandas.ParquetDataset]>=1.0",
    "kedro-viz>=6.7.0",
    "notebook",
    "python-statemachine>=2.1.2",
    "marimo>=0.2.4",
]
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }

[project.scripts]
evsee = "evsee.__main__:main"

[tool.pdm.dev-dependencies]
docs = [
    "sphinx>=7.2.6",
    "nbsphinx>=0.9.3",
    "sphinx-autodoc-typehints>=2.0.0",
    "sphinx-copybutton>=0.5.2",
    "ipykernel>=6.29.2",
    "Jinja2>=3.1.3",
    "myst-parser>=2.0.0",
    "furo>=2024.1.29",
]
lint_format = ["ruff>=0.2.1", "pre-commit>=3.6.1"]
test = ["pytest>=8.0.0", "pytest-cov>=4.1.0"]

[tool.kedro]
package_name = "evsee"
project_name = "evsee"
kedro_init_version = "0.19.2"
tools = [
    "Linting",
    "Custom Logging",
    "Documentation",
    "Data Structure",
    "Kedro Viz",
]
example_pipeline = "False"
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true

[tool.ruff.lint]
select = ["F", "W", "E", "I", "UP", "PL", "T201"]
ignore = ["E501"]

[tool.pdm]
distribution = true

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools.dynamic.version]
attr = "evsee.__version__"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.pdm.scripts]
docs = "sphinx-build -M html docs/source/ docs/build/"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]